fixed docs paths to auth routes
